test/sema/negative/subtyping1.impala
fn f(r: fn(f64)->()) -> () {
   r(5)
}
